manifests/bytestash/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: bytestash
spec: {}
status: {}
