manifests/bytestash/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bytestash
  name: bytestash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bytestash
  template:
    metadata:
      labels:
        app: bytestash
    spec:
      containers:
        - name: bytestash
          image: "ghcr.io/jordan-dalby/bytestash:latest"
          imagePullPolicy: Always
          volumeMounts:
            - name: snippets
              mountPath: /data/snippets
          ports:
            - containerPort: 5000
              name: http
      volumes:
        - name: snippets
          persistentVolumeClaim:
            claimName: snippets
