manifests/bytestash/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bytestash
  namespace: bytestash
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  type: ClusterIP
  selector:
    app: bytestash
